package christmas;

public class Application {
    public static void main(String[] args) {
        new EventPlanner().run();
    }
}
