package christmas.order;

public enum MenuType {
    APPETIZER,
    MAIN_DISH,
    DESERT,
    BEVERAGE
}
